--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,27 @@
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.title{
+  display: flex;
+
+  flex-wrap: wrap;
 }
 
 @media (prefers-reduced-motion: no-preference) {
